--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 remote_theme: pages-themes/minimal@v0.2.0
 plugins:
 - jekyll-remote-theme
-title: [Takuji Yamashita's Webpage]
+title: [Takuji Yamashita]
 description: [Takuji Yamashita's Webpage]
